added first style on homepage desktop. verified work on 4k display. Runs ok.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                <i class='bx bx-pulse'></i>
+                <img src="./assets/img/logo.jpg" alt="logo.jpep">
                 <a href="#">M A</a>
             </div>
 
@@ -88,6 +88,11 @@
                 </div>
             </div>
         </aside>
+
+        <main></main>
+
+        <div class="right-section"></div>
+
     </div>
 
 
