--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Music App">
     <meta name="author" content="Simone Iengo">
-    <meta name="description" content="music app">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta name="description" content="readme.txt">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-    <title>Ma | Music App | Desktop Site Alpha 0.1</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Music Application | Alpha 0.1 </title>
 </head>
+
 <body>
+
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                <img src="./assets/img/logo.jpg" alt="logo.jpep">
+                <img id="logo" src="./assets/img/logo.jpg" alt="logo.jpg" />
+                    <i class='bx bx-log-out-circle'></i>
+                </button>               
                 <a href="#">M A</a>
             </div>
 
@@ -23,38 +28,47 @@
                 <ul>
                     <li>
                         <i class='bx bxs-bolt-circle'></i>
-                        <a href="#">Explore</a></li>
+                        <a href="#">Explore</a>
+                    </li>
                     <li>
                         <i class='bx bxs-volume-full'></i>
-                        <a href="#">Genres</a></li>
+                        <a href="#">Genres</a>
+                    </li>
                     <li>
                         <i class='bx bxs-album'></i>
-                        <a href="#">Albums</a></li>
+                        <a href="#">Albums</a>
+                    </li>
                     <li>
                         <i class='bx bxs-microphone'></i>
-                        <a href="#">Artists</a></li>
+                        <a href="#">Artists</a>
+                    </li>
                     <li>
                         <i class='bx bxs-radio'></i>
-                        <a href="#">Podcasts</a></li>
+                        <a href="#">Poddcasts</a>
+                    </li>
                 </ul>
             </div>
-            <div class="menu">
 
+            <div class="menu">
                 <h5>Library</h5>
                 <ul>
                     <li>
                         <i class='bx bx-undo'></i>
-                        <a href="#">Recent</a></li>
-                        
+                        <a href="#">Recent</a>
+                    </li>
                     <li>
                         <i class='bx bxs-photo-album'></i>
-                        <a href="#">Albums</a></li>
+                        <a href="#">Albums</a>
+                    </li>
                     <li>
                         <i class='bx bxs-heart'></i>
-                        <a href="#">Favourites</a></li>
+                        <a href="#">Favourites</a>
+                    </li>
                     <li>
                         <i class='bx bxs-folder'></i>
-                        <a href="#">Local</a></li>
+                        <a href="#">Local</a>
+                    </li>
+
                 </ul>
             </div>
 
@@ -63,23 +77,27 @@
                 <ul>
                     <li>
                         <i class='bx bxs-plus-square'></i>
-                        <a href="#">Create New</a></li>
-                        
+                        <a href="#">Create New</a>
+                    </li>
                     <li>
                         <i class='bx bxs-caret-right-circle'></i>
-                        <a href="#">Best of 2024</a></li>
+                        <a href="#">Best of 2023</a>
+                    </li>
                     <li>
                         <i class='bx bxs-caret-right-circle'></i>
-                        <a href="#">Best of 2023</a></li>
+                        <a href="#">Best of 2022</a>
+                    </li>
                     <li>
                         <i class='bx bxs-caret-right-circle'></i>
-                        <a href="#">Green Day</a></li>
+                        <a href="#">Kael Fischer</a>
+                    </li>
+
                 </ul>
             </div>
 
             <div class="playing">
                 <div class="top">
-                    <img src="" alt="now-playing-song.png">
+                    <img src="assets/current.png">
                     <h4>Apple<br>Homepod</h4>
                 </div>
                 <div class="bottom">
@@ -87,16 +105,217 @@
                     <p>Playing On Device</p>
                 </div>
             </div>
+
+
         </aside>
 
-        <main></main>
+        <main>
+            <header>
+                <div class="nav-links">
+                    <button class="menu-btn" id="menu-open">
+                        <i class='bx bx-menu'></i>
+                    </button>
+                    <a href="#">Music</a>
+                    <a href="#">Live</a>
+                    <a href="#">Podcast</a>
+                </div>
 
-        <div class="right-section"></div>
+                <div class="search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="Type here to search">
+                </div>
+
+            </header>
+
+            <div class="trending">
+                <div class="left">
+                    <h5>Trending New Song</h5>
+                    <div class="info">
+                        <h2>Lost Emotions</h2>
+                        <h4>Rion Clarke</h4>
+                        <h5>63 Million Plays</h5>
+                        <div class="buttons">
+                            <button>Listen Now</button>
+                            <i class='bx bxs-heart'></i>
+                        </div>
+                    </div>
+                </div>
+                <img src="" alt="trending">
+            </div>
+
+            <div class="playlist">
+                <div class="genres">
+                    <div class="header">
+                        <h5>Genres</h5>
+                        <a href="#">See all</a>
+                    </div>
+
+                    <div class="items">
+                        <div class="item">
+                            <p>Electro<br>Pop</p>
+                        </div>
+                        <div class="item">
+                            <p>Dance<br>Beeat</p>
+                        </div>
+                        <div class="item">
+                            <p>Clubhouse<br>Remix</p>
+                        </div>
+                        <div class="item">
+                            <p>Hip Hop<br>Rap</p>
+                        </div>
+                        <div class="item">
+                            <p>Alternative<br>Indie</p>
+                        </div>
+                        <div class="item">
+                            <p>Classical<br>Period</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="music-list">
+                    <div class="header">
+                        <h5>Top Songs</h5>
+                        <a href="#">See all</a>
+                    </div>
+
+                    <div class="items">
+                        <div class="item">
+                            <div class="info">
+                                <p>01</p>
+                                <img src="" alt="image">
+                                <div class="details">
+                                    <h5>Sunrise</h5>
+                                    <p>Lila Rivera</p>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <p>03:45</p>
+                                <div class="icon">
+                                    <i class='bx bxs-right-arrow'></i>
+                                </div>
+                                <i class='bx bxs-plus-square'></i>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="info">
+                                <p>02</p>
+                                <img src="" alt="image">
+                                <div class="details">
+                                    <h5>Voyage</h5>
+                                    <p>Tyde Brennnan</p>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <p>04:35</p>
+                                <div class="icon">
+                                    <i class='bx bxs-right-arrow'></i>
+                                </div>
+                                <i class='bx bxs-plus-square'></i>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="info">
+                                <p>03</p>
+                                <img src="" alt="image">
+                                <div class="details">
+                                    <h5>Breeze</h5>
+                                    <p>Sola Kim</p>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <p>04:22</p>
+                                <div class="icon">
+                                    <i class='bx bxs-right-arrow'></i>
+                                </div>
+                                <i class='bx bxs-plus-square'></i>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="info">
+                                <p>04</p>
+                                <img src="" alt="image">
+                                <div class="details">
+                                    <h5>Twilight</h5>
+                                    <p>Jett Lawsonn</p>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <p>03:17</p>
+                                <div class="icon">
+                                    <i class='bx bxs-right-arrow'></i>
+                                </div>
+                                <i class='bx bxs-plus-square'></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+
+        </main>
+
+        <div class="right-section">
+
+            <div class="profile">
+                <i class='bx bxs-bell'></i>
+                <i class='bx bxs-cog'></i>
+                <div class="user">
+                    <div class="left">
+                        <img src="" alt="image">
+                    </div>
+                    <div class="right">
+                        <h5>Jhon Doe</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="music-player">
+                <div class="top-section">
+                    <div class="header">
+                        <h5>Player</h5>
+                        <i class='bx bxs-playlist'></i>
+                    </div>
+                    <div class="song-info">
+                        <img src="" alt="image">
+                        <div class="description">
+                            <h3>Ripple Echoes</h3>
+                            <h5>Kael Fischer</h5>
+                            <p>Best of 2024</p>
+                        </div>
+                        <div class="progress">
+                            <p>02:45</p>
+                            <div class="active-line"></div>
+                            <div class="deactive-line"></div>
+                            <p>01:02</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="player-actions">
+                    <div class="buttons">
+                        <i class='bx bx-repeat'></i>
+                        <i class='bx bx-first-page'></i>
+                        <i class='bx bxs-right-arrow play-button'></i>
+                        <i class='bx bx-last-page'></i>
+                        <i class='bx bx-transfer-alt'></i>
+                    </div>
+                    <div class="lyrics">
+                        <i class='bx bx-chevron-up'></i>
+                        <h5>LYRICS</h5>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 
 
-
     <script src="./js/script.js"></script>
 </body>
+
 </html>
